--- a/xdcs-frontend/src/app/modal/create-file/create-file.component.html
+++ b/xdcs-frontend/src/app/modal/create-file/create-file.component.html
@@ -1,14 +1,12 @@
 <app-modal #modal [title]="'Create a new ' + (isDirectory ? 'directory' : 'file')">
-  <label for="filename">Name</label>
   <input type="text"
          class="form-control mb-3"
-         id="filename"
          placeholder="Name"
          [(ngModel)]="filename"/>
 
   <input
     type="submit"
-    class="btn btn-primary float-right mt-3"
+    class="btn btn-primary float-right"
     (click)="doSubmit()"
     value="Create"/>
   <div class="clearfix"></div>
