PPXDCS-86 Add languages to the editor

--- a/xdcs-frontend/src/app/element/code-editor/code-editor.component.html
+++ b/xdcs-frontend/src/app/element/code-editor/code-editor.component.html
@@ -3,7 +3,7 @@
       #editor
       class="ace"
       [(text)]="editable.text"
-      [mode]="'java'"
+      [mode]="editable.mode"
       [theme]="'tomorrow'"
       [options]="options"
       [readOnly]="false"
