--- a/xdcs-frontend/src/app/element/loading/loading.component.html
+++ b/xdcs-frontend/src/app/element/loading/loading.component.html
@@ -1,7 +1,7 @@
 <div class="loading-wrapper">
   <ngx-spinner bdColor="rgba(0,0,0,0)"
                size="medium"
-               [name]="getName()"
+               [name]="name"
                [fullScreen]="false"
                color="#b4b4b4"
                type="ball-spin"></ngx-spinner>
