PPSDCS-57 Add a footer to the web interface

--- a/xdcs-frontend/src/app/view/sign-in/sign-in.component.html
+++ b/xdcs-frontend/src/app/view/sign-in/sign-in.component.html
@@ -1,36 +1,39 @@
 <app-navbar [showLinks]="false"></app-navbar>
-<div class="card margin-centered shadow-lg">
-  <div class="card-body">
-    <form>
-      <div class="form-group">
-        <label for="input-username">Username</label>
-        <input type="email"
-               class="form-control"
-               id="input-username"
-               placeholder="Username"
-               autocomplete="off"
-               autofocus
-               #username>
-      </div>
-      <div class="form-group">
-        <label for="input-password">Password</label>
-        <input type="password"
-               class="form-control"
-               id="input-password"
-               placeholder="Password"
-               autocomplete="off"
-               #password>
-      </div>
-      <button
-        type="submit"
-        class="btn btn-primary float-right"
-        [disabled]="disabled"
-        (click)="signIn()">
-        Sign In
-      </button>
-      <a [href]="'#' + route.snapshot.queryParamMap.get('redirect')"
-         [class.disabled]="disabled"
-         class="btn btn-outline-secondary float-right">Cancel</a>
-    </form>
+<div class="container">
+  <div class="card margin-centered shadow-lg">
+    <div class="card-body">
+      <form>
+        <div class="form-group">
+          <label for="input-username">Username</label>
+          <input type="email"
+                 class="form-control"
+                 id="input-username"
+                 placeholder="Username"
+                 autocomplete="off"
+                 autofocus
+                 #username>
+        </div>
+        <div class="form-group">
+          <label for="input-password">Password</label>
+          <input type="password"
+                 class="form-control"
+                 id="input-password"
+                 placeholder="Password"
+                 autocomplete="off"
+                 #password>
+        </div>
+        <button
+          type="submit"
+          class="btn btn-primary float-right"
+          [disabled]="disabled"
+          (click)="signIn()">
+          Sign In
+        </button>
+        <a [href]="'#' + route.snapshot.queryParamMap.get('redirect')"
+           [class.disabled]="disabled"
+           class="btn btn-outline-secondary float-right">Cancel</a>
+      </form>
+    </div>
   </div>
 </div>
+<app-footer></app-footer>
