PPXDCS-119 Add log viewer to task details

--- a/xdcs-frontend/src/styles.less
+++ b/xdcs-frontend/src/styles.less
@@ -76,3 +76,19 @@ app-root {
     filter: brightness(0.5);
   }
 }
+
+blink {
+  animation: 1s blinker linear infinite;
+}
+
+@keyframes blinker {
+  0% {
+    opacity: 1.0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1.0;
+  }
+}
