--- a/xdcs-frontend/src/styles.less
+++ b/xdcs-frontend/src/styles.less
@@ -92,3 +92,15 @@ blink {
     opacity: 1.0;
   }
 }
+
+.invalid-feedback {
+  display: block;
+}
+
+.form-control {
+  box-shadow: none;
+}
+
+.ng-invalid.ng-touched {
+  border-color: red;
+}
