--- a/xdcs-frontend/src/app/view/task-definition/task-definition.component.html
+++ b/xdcs-frontend/src/app/view/task-definition/task-definition.component.html
@@ -39,7 +39,7 @@
     <as-split-area size="20">
       <div class="split-area-container">
         <app-task-def-config [taskDefinition]="taskDefinition"
-                             (submit)="saveTaskDefinitionConfig($event.config)"></app-task-def-config>
+                             (save)="saveTaskDefinitionConfig($event.config)"></app-task-def-config>
       </div>
     </as-split-area>
   </as-split>
