--- a/xdcs-frontend/src/app/view/task-definition/task-definition.component.html
+++ b/xdcs-frontend/src/app/view/task-definition/task-definition.component.html
@@ -6,10 +6,21 @@
   <as-split *ngIf="taskDefinition !== null" unit="percent"
             appSizeFill [fillHeight]="true">
     <as-split-area size="20">
-      <div class="file-tree-toolbar">
-        <app-file-tree-toolbar
-          (createFile)="createFile('/')"
-          (createDirectory)="createDirectory('/')"></app-file-tree-toolbar>
+      <div class="file-tree-toolbar d-flex flex-row border-bottom">
+        <div class="flex-grow-0">
+          <button
+            class="btn btn-link float-left m-1"
+            [routerLink]="['/', 'task-definitions', taskDefinitionId]">
+            <fa-icon
+              [icon]="faAngleLeft"></fa-icon>
+            Back
+          </button>
+        </div>
+        <div class="flex-grow-1">
+          <app-file-tree-toolbar
+            (createFile)="createFile('/')"
+            (createDirectory)="createDirectory('/')"></app-file-tree-toolbar>
+        </div>
       </div>
       <div class="split-area-container">
         <app-file-tree
