PPXDCS-123 Use fullscreen list in nodes view
Add fullscreen list to nodes view

PPXDCS-123 Use fullscreen list in nodes view

Add fullscreen list to nodes view

--- a/xdcs-frontend/src/app/element/node-card/node-card.component.html
+++ b/xdcs-frontend/src/app/element/node-card/node-card.component.html
@@ -1,24 +1,7 @@
 <div class="card" (mouseover)="hover=true" (mouseleave)="hover=false">
   <div class="card-body transition-smooth" [ngClass]="hover ? 'shadow' : 'shadow-sm'">
-    <div class="row">
-      <div class="col-auto status-col">
-        <div>
-          <fa-icon
-            [icon]="faCircle"
-            [fixedWidth]="true"
-            [ngClass]="data.status == NodeStatus.Ready ? 'icon-success' :
-                       data.status == NodeStatus.Offline ? 'icon-error' :
-                       data.status == NodeStatus.Unavailable ? 'icon-warn icon-pulse-1' :
-                       data.status == NodeStatus.Busy ? 'icon-warn' :
-                       'icon-greyed-out'"
-            size="sm"></fa-icon>
-        </div>
-      </div>
-      <div class="col details-col">
-        <h5 class="card-title" [ngClass]="!data.name ? 'unknown-name' : ''">{{data.name}}</h5>
-        <p class="card-text">{{data.address}}</p>
-      </div>
-    </div>
-    <a [routerLink]="data.routerLink" class="stretched-link"></a>
+    <app-node-basic-info [data]="data"></app-node-basic-info>
   </div>
+  <a [routerLink]="data.routerLink" class="stretched-link"></a>
 </div>
+
