--- a/xdcs-frontend/src/app/view/nodes/nodes.component.html
+++ b/xdcs-frontend/src/app/view/nodes/nodes.component.html
@@ -1,8 +1,9 @@
-<app-navbar></app-navbar>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-2">
-      <app-nodes-list></app-nodes-list>
-    </div>
-  </div>
-</div>
+<app-navbar [fullscreenMode]="true"></app-navbar>
+<app-fullscreen-list [data]="cards">
+  <ng-template #element let-item="element">
+    <app-node-basic-info [data]="item"></app-node-basic-info>
+  </ng-template>
+  <ng-template #details let-item="selected">
+    <app-node-preview [node]="item"></app-node-preview>
+  </ng-template>
+</app-fullscreen-list>
